[gd_scene load_steps=2 format=3 uid="uid://hu7aw5hdggpr"]

[ext_resource type="Script" path="res://mission_view.gd" id="1_6x575"]

[node name="MissionView" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -300.0
offset_right = 350.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6x575")

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -58.0
offset_bottom = 31.0
grow_horizontal = 0
text = "X"

[node name="SquadPicker" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 77.0
offset_top = 475.0
offset_right = 235.0
offset_bottom = 495.0

[node name="TargetLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 46.0
offset_top = 74.0
offset_right = 128.0
offset_bottom = 97.0
text = "TARGET:"

[node name="EnemyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 137.0
offset_right = 122.0
offset_bottom = 160.0
text = "ENEMIES:"

[node name="SquadSender" type="Button" parent="."]
layout_mode = 0
offset_left = 258.0
offset_top = 470.0
offset_right = 368.0
offset_bottom = 501.0
text = "SEND SQUAD"
