[gd_scene load_steps=4 format=3 uid="uid://0uppyai1jxut"]

[ext_resource type="Script" path="res://mission_view.gd" id="1_oq6i0"]
[ext_resource type="PackedScene" uid="uid://bbvij8ic2388a" path="res://anything_list.tscn" id="2_6o3ld"]
[ext_resource type="PackedScene" uid="uid://b13op42pqpmk5" path="res://picker.tscn" id="3_sljbf"]

[node name="MissionView" type="Panel"]
offset_right = 700.0
offset_bottom = 600.0
script = ExtResource("1_oq6i0")

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -58.0
offset_bottom = 31.0
grow_horizontal = 0
text = "X"

[node name="TargetLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 46.0
offset_top = 74.0
offset_right = 128.0
offset_bottom = 97.0
text = "TARGET:"

[node name="RewardLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 153.0
offset_right = 122.0
offset_bottom = 176.0
text = "REWARD:"

[node name="StartMission" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -55.0
offset_right = 55.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
text = "EXECUTE!"

[node name="UnitList" parent="." instance=ExtResource("2_6o3ld")]
layout_mode = 0
offset_left = 52.0
offset_top = 301.0
offset_right = 655.0
offset_bottom = 525.0
columns = 3

[node name="Picker" parent="." instance=ExtResource("3_sljbf")]
visible = false
layout_mode = 1

[node name="MinionCount" type="Label" parent="."]
layout_mode = 0
offset_left = 47.0
offset_top = 251.0
offset_right = 143.0
offset_bottom = 274.0
text = "0/5 Selected"

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="StartMission" to="." method="_on_start_mission_pressed"]
